NetBSD Problem Report #48332

From www@NetBSD.org  Tue Oct 22 15:20:17 2013
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1 with cipher DHE-RSA-AES256-SHA (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 2278EA593C
	for <gnats-bugs@gnats.NetBSD.org>; Tue, 22 Oct 2013 15:20:17 +0000 (UTC)
Message-Id: <20131022152015.AA5E4A597D@mollari.NetBSD.org>
Date: Tue, 22 Oct 2013 15:20:12 +0000 (UTC)
From: petri.laakso@asd.fi
Reply-To: petri.laakso@asd.fi
To: gnats-bugs@NetBSD.org
Subject: evbarm/imx23_olinuxino (ARM9E) doesn't boot after recent change to cpufunc.c
X-Send-Pr-Version: www-1.0

>Number:         48332
>Category:       port-arm
>Synopsis:       evbarm/imx23_olinuxino (ARM9E) doesn't boot after recent change to cpufunc.c
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    port-arm-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Oct 22 15:25:00 +0000 2013
>Closed-Date:    Thu Oct 24 18:48:53 +0000 2013
>Last-Modified:  Thu Oct 24 18:48:53 +0000 2013
>Originator:     Petri Laakso
>Release:        current
>Organization:
Doesn't apply
>Environment:
NetBSD 6.99.24 (IMX23_OLINUXINO) #0: Tue Oct 22 17:02:10 EEST 2013
current of 2013-10-21 (CVS/Tag D2013.10.20.21.00.0)

cpu0 at mainbus0 core 0: ARM926EJ-S rev 5 (ARM9EJ-S V5TEJ core)
cpu0: DC enabled IC enabled WB enabled EABT branch prediction enabled
cpu0: 16KB/32B 4-way L1 Instruction cache                            
cpu0: 16KB/32B 4-way write-back-locking-C L1 Data cache

>Description:
I tried recent -current for evbarm/IMX23_OLINUXINO and it didn't boot into multi- or single user mode. I tracked problem to recently changed
src/sys/arch/arm/arm/cpufunc.c file. When I reverted latest change which
seems to affect processor I'm using, problem disappeared and I'm able to boot into multi user again.

This possibly affects other ports using ARM9E as well.
>How-To-Repeat:
Try to use evbarm/IMX23_OLINUXINO with ARM9E class processor.
>Fix:
Index: src/sys/arch/arm/arm/cpufunc.c
===================================================================
RCS file: /cvsroot/src/sys/arch/arm/arm/cpufunc.c,v
retrieving revision 1.126
diff -u -r1.126 cpufunc.c
--- src/sys/arch/arm/arm/cpufunc.c      20 Oct 2013 09:30:41 -0000      1.126
+++ src/sys/arch/arm/arm/cpufunc.c      22 Oct 2013 15:17:47 -0000
@@ -2871,7 +2871,7 @@

        /* Set the control register */
        curcpu()->ci_ctrl = cpuctrl;
-       cpu_control(cpuctrlmask, cpuctrl);
+       cpu_control(0xffffffff, cpuctrl);

        /* And again. */
        cpu_idcache_wbinv_all();

>Release-Note:

>Audit-Trail:
From: "Nick Hudson" <skrll@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/48332 CVS commit: src/sys/arch/arm/arm
Date: Wed, 23 Oct 2013 20:28:11 +0000

 Module Name:	src
 Committed By:	skrll
 Date:		Wed Oct 23 20:28:11 UTC 2013

 Modified Files:
 	src/sys/arch/arm/arm: cpufunc.c

 Log Message:
 Fix PR/48332 by reverting to passing 0xffffffff as the cpuctrlmask.
 Comment out the cpuctrlmask that doesn't work for the imx23_olinuxino
 leaving it there for reference.


 To generate a diff of this commit:
 cvs rdiff -u -r1.126 -r1.127 src/sys/arch/arm/arm/cpufunc.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Petri Laakso <petri.laakso@asd.fi>
To: gnats-bugs@NetBSD.org
Cc: port-arm-maintainer@netbsd.org, gnats-admin@netbsd.org, 
    netbsd-bugs@netbsd.org
Subject: Re: PR/48332 CVS commit: src/sys/arch/arm/arm
Date: Thu, 24 Oct 2013 13:53:29 +0300 (EEST)

 Thanks!

 I can confirm that evbarm/imx23_olinuxino works now as expected.

 Petri Laakso

State-Changed-From-To: open->closed
State-Changed-By: jnemeth@NetBSD.org
State-Changed-When: Thu, 24 Oct 2013 18:48:53 +0000
State-Changed-Why:
Submitter confirms fixed.  Thanks for the PR!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.