Fix PR/48332 by reverting to passing 0xffffffff as the cpuctrlmask. Comment out the cpuctrlmask that doesn't work for the imx23_olinuxino leaving it there for reference.